--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+# Ignore Files
 build-InterfazControl-Desktop_Qt_5_2_0_GCC_64bit-Debug/
-*.o
 *~
+*.o
 
+
+# Nut not these files
+!.gitignore
+!clienteOlimex.o
+!cliente.o
